--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ html, body {
 }
 
 .sidebar h2 {
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin-bottom: var(--gf-spacing);
 }
 
